scss/blocks/shortcuts.scss
/* =================================== */
/*  Shortcut
/* =================================== */

/* Default theming */
:root {
  --shortcutGridGap: 12px;
  --shortcutPadding: 0;
  --shortcutBorderRadius: var(--borderRadiusDefault);
  --shortcutContentPadding: 16px;
  --shortcutHorizontalContentPadding: 12px;
  --shortcutContentGap: 4px;
  --shortcutIconHeight: 48px;
  --shortcutIconWidth: 48px;
  --shortcutBoxShadow: var(--boxShadowLevel1);
  --shortcutBoxShadowHover: var(--boxShadowLevel2);
  --shortcutBackground: var(--colorBackgroundPrimary);
  --shortcutBackgroundHover: var(--colorBackgroundPrimary);
  --shortcutTitleFontSize: var(--fontSizeSmall);
  --shortcutTitleFontWeight: var(--fontWeightSemibold);
  --shortcutDescriptionFontSize: var(--fontSizeTiny);
  --shortcutImageBorderRadius: 0;

  /* Top image size */
  --shortcutCol4TopImageSize: 100px;
  --shortcutCol3TopImageSize: 128px;
  --shortcutCol2TopImageSize: 156px;
  --shortcutCol1TopImageSize: 100px;
}

/* Styles */
.content-block--shortcuts {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-column-gap: var(--shortcutGridGap);
  grid-row-gap: var(--shortcutGridGap);

  .shortcut-item {
    border-radius: var(--shortcutBorderRadius);
    box-shadow: var(--shortcutBoxShadow);
    box-sizing: border-box;
    overflow: hidden;
    transition: var(--transitionDefault);
    background: var(--shortcutBackground);
    padding: var(--shortcutPadding);

    &:hover {
      box-shadow: var(--shortcutBoxShadowHover);
      background: var(--shortcutBackgroundHover);
      text-decoration: none;

      p.title {
        color: var(--colorAccent);
      }

      * {
        text-decoration: none;
      }
    }

    .content {
      padding: var(--shortcutContentPadding);
      display: flex;
      flex-direction: column;
      gap: var(--shortcutContentGap);
    }

    div.preview {
      background-color: var(--colorBackgroundPrimary);
      display: flex;
      align-items: center;
      justify-content: center;
      font-size: 60px;
      width: 100%;
      height: var(--shortcutCol4TopImageSize);
      border-radius: var(--shortcutImageBorderRadius);

      &.empty {
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' viewBox='0 0 20 20'%3E%3Cpath d='M16.971 3.029a4.367 4.367 0 0 0-6.175 0l-2.27 2.269 1.25 1.249 2.269-2.269a2.6 2.6 0 1 1 3.677 3.677l-2.269 2.269 1.25 1.25 2.268-2.27a4.367 4.367 0 0 0 0-6.175Z' fill='rgba(0,0,0,0.5)'/%3E%3Cpath d='m13.526 7.798-1.324-1.324-5.728 5.728 1.324 1.324 5.728-5.728Z' fill='rgba(0,0,0,0.5)'/%3E%3Cpath d='m6.547 9.776-1.25-1.25-2.268 2.27a4.367 4.367 0 1 0 6.175 6.175l2.27-2.269-1.25-1.249-2.269 2.269a2.6 2.6 0 1 1-3.677-3.677l2.269-2.269Z' fill='rgba(0,0,0,0.5)'/%3E%3C/svg%3E");
        background-repeat: no-repeat;
        background-position: center;
        background-color: var(--colorBackgroundSecondary);
      }
    }

    p.title {
      padding: 0;
      margin: 0;
      font-size: var(--shortcutTitleFontSize);
      line-height: 1.3;
      font-weight:  var(--shortcutTitleFontWeight);
      color: var(--colorInkPrimary);
    }

    p.description {
      margin: 0;
      padding: 0;
      font-size: var(--shortcutDescriptionFontSize);
      line-height: 1.4;
      font-weight: var(--fontWeightRegular);
      color: var(--colorInkSecondary);
    }

    p.link {
      font-size: var(--shortcutDescriptionFontSize);
      line-height: 1.4;
      margin: 0;
      font-weight: var(--fontWeightSemibold);
      color: var(--colorInkPrimary);
      margin-top: auto;
    }
  }
}

/* Shortcut variants */
.content-block--shortcuts {
  
  // 3 columns
  &.variant-image-top-3,
  &.variant-icon-top-3,
  &.variant-icon-leading-3 {
    grid-template-columns: repeat(3, 1fr);
    grid-column-gap: calc(var(--shortcutGridGap) * 1.5); 
    grid-row-gap: calc(var(--shortcutGridGap) * 1.5); 
  }

  // 1 column
  &.variant-icon-leading-1,
  &.variant-image-leading-1,
  &.variant-image-top-1 {
    grid-template-columns: repeat(1, 1fr);
    grid-row-gap: var(--shortcutGridGap);
  }

  // Image on top – 2 columns
  &.variant-image-top-2,
  &.variant-icon-top-2,
  &.variant-icon-leading-2,
  &.variant-image-leading-2 {
    grid-template-columns: repeat(2, 1fr);
    grid-column-gap: calc(var(--shortcutGridGap) * 2); 
    grid-row-gap: calc(var(--shortcutGridGap) * 2); 
  }

  // Image on top – image sizes
  &.variant-image-top-3 div.preview {
    height: var(--shortcutCol3TopImageSize);
  }

  &.variant-image-top-2 div.preview {
    height: var(--shortcutCol2TopImageSize);
  }

  &.variant-image-top-1 div.preview {
    height: var(--shortcutCol1TopImageSize);
  }

  // Icon on top
  &.variant-icon-top-4 div.preview,
  &.variant-icon-top-3 div.preview,
  &.variant-icon-top-2 div.preview {
    width: var(--shortcutIconWidth);
    height: var(--shortcutIconHeight);
    margin: var(--shortcutContentPadding);
    margin-bottom: 0px !important;
    border-radius: var(--shortcutBorderRadius);
  }

  // Leading icon
  &.variant-icon-leading-1 .shortcut-item,
  &.variant-icon-leading-2 .shortcut-item,
  &.variant-icon-leading-3 .shortcut-item {
    display: flex;
    flex-direction: row;

    .content {
      padding: var(--shortcutHorizontalContentPadding);
      display: flex;
      flex-direction: column;
      gap: 2px; /* intentionally non-overridable by the theming */
      margin-top: 2px; /* compensating vertical alignment for multi-line text */
    }

    div.preview,
    div.preview,
    div.preview {
      width: var(--shortcutIconWidth);
      height: var(--shortcutIconHeight);
      margin: 8px 4px 8px 8px;
      border-radius: var(--borderRadiusDefault);
      flex-shrink: 0;
    }
  }

  // Image leading
  &.variant-image-leading-1 .shortcut-item,
  &.variant-image-leading-2 .shortcut-item {
    display: flex;
    flex-direction: row;
    
    .content {
      padding: var(--shortcutHorizontalContentPadding);
    }

    div.preview {
      aspect-ratio: 16 / 9;
      height: 100%;
    }
  }

  &.variant-image-leading-1 .shortcut-item div.preview {
    max-width: 28%;
  }

  &.variant-image-leading-2 .shortcut-item div.preview {
    max-width: 32%;
  }

}




@media (max-width: $breakpoint-mobile) {
  .content-block--shortcuts {
    // applied to all the variants because of !important
    grid-template-columns: repeat(1, 1fr) !important;
  }
}

@media (max-width: $breakpoint-tablet) {
  .content-block--shortcuts,
  .content-block--shortcuts.variant-icon-top-3,
  .content-block--shortcuts.variant-image-top-3,
  .content-block--shortcuts.variant-icon-leading-3 {
    grid-template-columns: repeat(2, 1fr);
  }

  .content-block--shortcuts.variant-image-leading-1,
  .content-block--shortcuts.variant-image-leading-2 {
    grid-template-columns: repeat(1, 1fr);
  }
}

